# jane_doe

./: .gitignore  README.md  matches.csv  pyproject.toml  requirements.txt  srsly-2.4.8-cp312-cp312-macosx_11_0_arm64.whl
jane_doe/: main.py  z_main.py
jane_doe/config/: config.json
jane_doe/data/output/: pii_report.csv
jane_doe/modules/: false_positive_filter.py  file_handler.py  pii_detector.py  regex_extractor.py  report_generator.py
jane_doe/modules/anonymizer/: anonymizer.py  anonymizer_V2.py  csv_analyse_test.py
jane_doe/modules/anonymizer/full_test/: presidio_en  presidio_full_test_fr_core_news_sm.py  presidio_full_test_transformers_fr_core_news_md.py
jane_doe/settings/: acronyms.csv  config.json
jane_doe/utils/: __init__.py  get_filename.py  load_docx_files.py  load_settings.py
