[tool.poetry]
name = "jane-doe"
version = "0.1.0"
description = ""
authors = ["beatricedaniel <beatrice.yk.daniel@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
